--- a/ga_zoom.html
+++ b/ga_zoom.html
@@ -14,7 +14,10 @@
         <h1 id="date">Week</h1>
       </div>
     </div>
-    <script src='moment.js'></script>
-    <script src='script.js'></script>
+    <script>
+      setTimeout( function(){ 
+        window.location = "https://generalassembly.zoom.us/j/91931073681?pwd=ajBudnd0MkRzSjNzMUF2cVVrbituZz09"; 
+      },3000);
+    </script>
   </body>
 </html>
