--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-  </head>
-  <body>
-    <div class='container'>
-      <div>
-        <h3>We are on</h3>
-        <h1 id="date">Week</h1>
-      </div>
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+</head>
+
+<body>
+  <div class='container'>
+    <div>
+      <h1 id="date">Week</h1>
+      <h3 id="day">Day</h3>
+
     </div>
-    <script src='moment.js'></script>
-    <script src='script.js'></script>
-  </body>
+  </div>
+  <script src='moment.js'></script>
+  <script src='script.js'></script>
+</body>
+
 </html>
